the_project/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  namespace: project
  name: project-route

spec:

  parentRefs:
    - name: project-gateway

  rules:

  - matches:

      - path:
          type: PathPrefix
          value: /

    backendRefs:

      - name: todo-app-service
        port: 80
